Beta (#33)
* - Update Grouping Method
- Allow Ikarite Buds to grow.
- Finish encapsulation. ( Which will be removed later. Cri. )

* - Partially remove encapsulation.
- Improve API
- Fix Liquid Morkite flowing infinitely.

* - Add some testing capabilities.

* - Add `RichOre`
- Add some `Javadocs`

* - Add two classes to handle Armor & Tool creation.
- Add more Javadocs.
- Add more logs.
- Remove more encapsulation.
- Add Overwatch.java to handle logs.
- Add method to handle creating Armor Recipes.
- Remove unnecessary parameters for some methods.

* - Add Three classes to handle Item creation.
- Add more Javadocs.
- Add function to simplify adding ores to the Overworld.
- Rename `GemstyneItemgGroup` to `GemstyneCreativeGroup`
- Add more info logs.
- Separate `registerItem` into three different methods.
- Fix a few warnings.

* - Add GemstyneBlockSet
- Add VolatileOre
- Add more Javadocs
- Refactor and simplify AfflictiveBlock's logic

* - Merge GemstyneItemSet into one class.
- Add owo-lib to dependencies.
- Begin usage of OwoItemSettings
- Begin usage of OwoItemGroup
- Add GemstyneRegistry class to provide methods for registration. May be renamed to GemstyneRegistryHandler in the future.
- Finish RichOre
- Touch-up VolatileOre
- Use Guard Clauses to prevent computations from running Clientside.

* - Fully integrate owo-lib into Gemstyne.
- Add TorriumOre
- Remove some troublesome guard clauses.
- Move registration methods into GemstyneRegistry

* - Add generic variant of `createOre()` method.
- Use HashMap<K, V> to store oreVariants + itemVariants.
- Add various methods to simplify Data Generation.
- Use ImmutableList<T> when generating smelting recipes for armor.
- Make armor smelt into ingots if solid, nuggets if mail.

* - Create methods to simplify model generation.
- Add GemstyneGeodeSet
- Add Lapis Geode.

* - Automate registration of blocks in GemstyneBlockSet
- Merge rawBlock & pureBlock into oreVa